--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -25,7 +25,7 @@
 </style>
 <div class="jumbotron" id="header">
     
-    <h1 style="color:black; font-family:Cambria; background-color:rgba(247, 246, 239,0.8);width:22%;border-radius:10px;"><center>Albums</center></h1>
+    <h1 style="color:black; font-family:Cambria; background-color:rgba(247, 246, 239,0.8);width:22%;border-radius:10px;"><center>Albums!</center></h1>
     
 </div>
 
